--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ button:hover{filter:brightness(1.1)}
   <h2>Withdraw ETH 💙</h2>
   <div class="muted">
     Contratto:
-    <a href="https://basescan.org/address/0x37e3a8d3ba53f43d955f83b54cbe4c0d39a10b83" target="_blank">
-      0x37e3…0b83 ↗
+    <a href="0x18b1119706520839E2aa632191331A94A673F00c" target="_blank">
+      contract link ↗
     </a>
   </div>
 
@@ -46,7 +46,7 @@ button:hover{filter:brightness(1.1)}
 
 <script src="https://cdn.jsdelivr.net/npm/ethers@6.13.2/dist/ethers.umd.min.js"></script>
 <script>
-const CONTRACT="0x37e3a8d3ba53f43d955f83b54cbe4c0d39a10b83";
+const CONTRACT="0x18b1119706520839E2aa632191331A94A673F00c";
 const ABI=[
 {"inputs":[],"name":"owner","outputs":[{"internalType":"address","name":"","type":"address"}],"stateMutability":"view","type":"function"},
 {"inputs":[],"name":"tipsBalance","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"},
